--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
@@ -71,7 +72,7 @@ button:hover {
 
 /* Heading */
 h3,
-label[for='new-task'] {
+label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -99,7 +100,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for='new-task'] {
+label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
@@ -137,13 +138,13 @@ li > input[type="text"] {
   width: 226px
 }
 
-button .delete img {
+button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button .delete img:hover {
+button.delete img:hover {
   transform: rotateZ(0);
 }
 
@@ -154,15 +155,15 @@ ul#completed-tasks label {
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul li input[type="text"] {
   display: none
 }
 
-ul li .editMode input[type=text] {
+ul li.editMode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li .editMode label {
+ul li.editMode label {
     display:none;
 }
