refactor: adjust CSS-formatting according to rule 3.2 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -5,23 +5,23 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header-container {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header-container img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header-container .more_inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .header-container { 
     text-align: center;
   }
 }
@@ -159,11 +159,11 @@ ul li input[type="text"] {
   display: none
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
     display:none;
 }
