refactor: adjust CSS-formatting according to rule 3.7 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -150,7 +150,7 @@
 }
 
 .li > .task {
-  width: 226px
+  width: 226px;
 }
 
 .delete > .remove {
